--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@supabase/supabase-js": "^2.87.1",
     "@types/cheerio": "^0.22.35",
     "@types/react-redux": "^7.1.34",
+    "@vercel/analytics": "^1.6.1",
     "axios": "^1.9.0",
     "cheerio": "^1.0.0-rc.12",
     "cytoscape": "^3.32.0",
